fix css alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4155,4 +4155,5 @@ ul.left{
 }
 ul.right{
 	margin-left: 5em;
+	text-align: left;
 }
